--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@pinia/nuxt": "^0.11.3",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
